[tool.poetry]
name = "study-with-friends-server"
version = "0.1.0"
description = ""
authors = ["Michael Pu <michael.pu123@gmail.com>"]

[tool.taskipy.tasks]
start = "python server.py"

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-restx = "^0.2.0"
flask-login = "^0.5.0"
logzero = "^1.5.0"
pymodm = "^0.4.3"
dnspython = "^2.0.0"
shortuuid = "^1.0.1"
simplejson = "^3.17.2"
flask-cors = "^3.0.8"

[tool.poetry.dev-dependencies]
taskipy = "^1.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
